# stdcompat

./: .gitattributes  .gitignore  CHANGES  CHANGES.md  ChangeLog  Dockerfile  Jenkinsfile  META  META.in  META.pp  Makefile  Makefile.am  Makefile.bootstrap  Makefile.in  README.md  bootstrap.sh  configure  configure.ac  dune  dune-project  generate_interfaces.sh  install-sh  interface_generator.ml  jbuild  missing  opam  stdcompat.h.in  stdcompat.ml  stdcompat.ml.in  stdcompat.mlip  stdcompat.mlp  stdcompat.opam  stdcompat__arg.ml.in  stdcompat__arg.mli  stdcompat__arg.mli.in  stdcompat__arg.mlip  stdcompat__arg.mlp  stdcompat__arg_s.mli.in  stdcompat__array.mli.in  stdcompat__array.mlip  (+240 more)
.github/scripts/: build-dune.sh  build-make-no-magic.sh  build-make.sh  build-old-ocaml.sh
.github/workflows/: build.yml  ci.yml
ci/: cygwin-compile-ocaml.sh
docker-opam-all-ocaml-versions/: Dockerfile
dockerfiles/old-ocamls/: Dockerfile
interface_generator/: dump_interfaces.sh  generate_interfaces.sh  interface_dumper.ml  interface_generator.ml  interface_tools.ml
interfaces/4.08/: float.mli  format.mli  fun.mli  list.mli  listLabels.mli  pervasives.mli  stdlib.mli
