(library
 (name stdcompat)
 (public_name stdcompat)
 (wrapped false)
 (flags (:standard -nolabels -w -3))
 (install_c_headers stdcompat)
 (foreign_stubs
  (language c)
  (names stdcompat__stubs))
 (modules
   stdcompat__arg
   stdcompat__arg_s
   stdcompat__array
   stdcompat__arrayLabels
   stdcompat__arrayLabels_s
   stdcompat__array_s
   stdcompat__atomic
   stdcompat__atomic_s
   stdcompat__bool
   stdcompat__bool_s
   stdcompat__buffer
   stdcompat__buffer_s
   stdcompat__bytes
   stdcompat__bytesLabels
   stdcompat__bytesLabels_s
   stdcompat__bytes_s
   stdcompat__char
   stdcompat__char_s
   stdcompat__digest
   stdcompat__digest_s
   stdcompat__either
   stdcompat__either_s
   stdcompat__ephemeron
   stdcompat__ephemeron_s
   stdcompat__filename
   stdcompat__filename_s
   stdcompat__float
   stdcompat__float_s
   stdcompat__format
   stdcompat__format_s
   stdcompat__fun
   stdcompat__fun_s
   stdcompat__hashtbl
   stdcompat__hashtbl_ext
   stdcompat__hashtbl_s
   stdcompat__in_channel
   stdcompat__in_channel_s
   stdcompat__init
   stdcompat__int
   stdcompat__int32
   stdcompat__int32_s
   stdcompat__int64
   stdcompat__int64_s
   stdcompat__int_s
   stdcompat__lazy
   stdcompat__lazy_s
   stdcompat__lexing
   stdcompat__lexing_s
   stdcompat__list
   stdcompat__listLabels
   stdcompat__listLabels_s
   stdcompat__list_s
   stdcompat__map
   stdcompat__map_s
   stdcompat__moreLabels
   stdcompat__moreLabels_s
   stdcompat__native
   stdcompat__nativeint
   stdcompat__nativeint_s
   stdcompat__option
   stdcompat__option_s
   stdcompat__out_channel
   stdcompat__out_channel_s
   stdcompat__pervasives
   stdcompat__pervasives_s
   stdcompat__printexc
   stdcompat__printexc_s
   stdcompat__printf
   stdcompat__printf_s
   stdcompat__queue
   stdcompat__queue_s
   stdcompat__random
   stdcompat__random_s
   stdcompat__result
   stdcompat__result_s
   stdcompat__root
   stdcompat__seq
   stdcompat__seq_s
   stdcompat__set
   stdcompat__set_s
   stdcompat__stack
   stdcompat__stack_s
   stdcompat__stdlib
   stdcompat__stdlib_s
   stdcompat__string
   stdcompat__stringLabels
   stdcompat__stringLabels_s
   stdcompat__string_s
   stdcompat__sys
   stdcompat__sys_s
   stdcompat__tools
   stdcompat__uchar
   stdcompat__uchar_s
   stdcompat__unit
   stdcompat__unit_s
   stdcompat__weak
   stdcompat__weak_s
   stdcompat))

(executable
 (name stdcompat_tests)
 (modules stdcompat_tests)
 (libraries stdcompat))

(rule
 (copy stdcompat__native.ml_native stdcompat__native.ml))

(rule
 (copy stdcompat__init.mli.in stdcompat__init.ml.in))

(rule
 (targets
   configure
   Makefile.in)
 (mode promote)
 (deps
  Makefile.am
  VERSION
  configure.ac)
 (action (run %{bin:autoreconf} --force --install --verbose)))

(rule
 (targets
  META
  Makefile
  stdcompat.h
  stdcompat__native.ml_byte
  stdcompat__native.ml_native
  stdcompat.ml
  stdcompat.mli
  stdcompat_tests.ml
  stdcompat__arg.ml
  stdcompat__arg.mli
  stdcompat__arg_s.ml
  stdcompat__arg_s.mli
  stdcompat__array.ml
  stdcompat__array.mli
  stdcompat__arrayLabels.ml
  stdcompat__arrayLabels.mli
  stdcompat__arrayLabels_s.ml
  stdcompat__arrayLabels_s.mli
  stdcompat__array_s.ml
  stdcompat__array_s.mli
  stdcompat__atomic.ml
  stdcompat__atomic.mli
  stdcompat__atomic_s.ml
  stdcompat__atomic_s.mli
  stdcompat__bool.ml
  stdcompat__bool.mli
  stdcompat__bool_s.ml
  stdcompat__bool_s.mli
  stdcompat__buffer.ml
  stdcompat__buffer.mli
  stdcompat__buffer_s.ml
  stdcompat__buffer_s.mli
  stdcompat__bytes.ml
  stdcompat__bytes.mli
  stdcompat__bytesLabels.ml
  stdcompat__bytesLabels.mli
  stdcompat__bytesLabels_s.ml
  stdcompat__bytesLabels_s.mli
  stdcompat__bytes_s.ml
  stdcompat__bytes_s.mli
  stdcompat__char.ml
  stdcompat__char.mli
  stdcompat__char_s.ml
  stdcompat__char_s.mli
  stdcompat__digest.ml
  stdcompat__digest.mli
  stdcompat__digest_s.ml
  stdcompat__digest_s.mli
  stdcompat__either.ml
  stdcompat__either.mli
  stdcompat__either_s.ml
  stdcompat__either_s.mli
  stdcompat__ephemeron.ml
  stdcompat__ephemeron.mli
  stdcompat__ephemeron_s.ml
  stdcompat__ephemeron_s.mli
  stdcompat__filename.ml
  stdcompat__filename.mli
  stdcompat__filename_s.ml
  stdcompat__filename_s.mli
  stdcompat__float.ml
  stdcompat__float.mli
  stdcompat__float_s.ml
  stdcompat__float_s.mli
  stdcompat__format.ml
  stdcompat__format.mli
  stdcompat__format_s.ml
  stdcompat__format_s.mli
  stdcompat__fun.ml
  stdcompat__fun.mli
  stdcompat__fun_s.ml
  stdcompat__fun_s.mli
  stdcompat__hashtbl.ml
  stdcompat__hashtbl.mli
  stdcompat__hashtbl_ext.ml
  stdcompat__hashtbl_ext.mli
  stdcompat__hashtbl_s.ml
  stdcompat__hashtbl_s.mli
  stdcompat__in_channel.ml
  stdcompat__in_channel.mli
  stdcompat__in_channel_s.ml
  stdcompat__in_channel_s.mli
  stdcompat__init.ml
  stdcompat__init.mli
  stdcompat__int.ml
  stdcompat__int.mli
  stdcompat__int32.ml
  stdcompat__int32.mli
  stdcompat__int32_s.ml
  stdcompat__int32_s.mli
  stdcompat__int64.ml
  stdcompat__int64.mli
  stdcompat__int64_s.ml
  stdcompat__int64_s.mli
  stdcompat__int_s.ml
  stdcompat__int_s.mli
  stdcompat__lazy.ml
  stdcompat__lazy.mli
  stdcompat__lazy_s.ml
  stdcompat__lazy_s.mli
  stdcompat__lexing.ml
  stdcompat__lexing.mli
  stdcompat__lexing_s.ml
  stdcompat__lexing_s.mli
  stdcompat__list.ml
  stdcompat__list.mli
  stdcompat__listLabels.ml
  stdcompat__listLabels.mli
  stdcompat__listLabels_s.ml
  stdcompat__listLabels_s.mli
  stdcompat__list_s.ml
  stdcompat__list_s.mli
  stdcompat__map.ml
  stdcompat__map.mli
  stdcompat__map_s.ml
  stdcompat__map_s.mli
  stdcompat__moreLabels.ml
  stdcompat__moreLabels.mli
  stdcompat__moreLabels_s.ml
  stdcompat__moreLabels_s.mli
  stdcompat__nativeint.ml
  stdcompat__nativeint.mli
  stdcompat__nativeint_s.ml
  stdcompat__nativeint_s.mli
  stdcompat__option.ml
  stdcompat__option.mli
  stdcompat__option_s.ml
  stdcompat__option_s.mli
  stdcompat__out_channel.ml
  stdcompat__out_channel.mli
  stdcompat__out_channel_s.ml
  stdcompat__out_channel_s.mli
  stdcompat__pervasives.ml
  stdcompat__pervasives.mli
  stdcompat__pervasives_s.ml
  stdcompat__pervasives_s.mli
  stdcompat__printexc.ml
  stdcompat__printexc.mli
  stdcompat__printexc_s.ml
  stdcompat__printexc_s.mli
  stdcompat__printf.ml
  stdcompat__printf.mli
  stdcompat__printf_s.ml
  stdcompat__printf_s.mli
  stdcompat__queue.ml
  stdcompat__queue.mli
  stdcompat__queue_s.ml
  stdcompat__queue_s.mli
  stdcompat__random.ml
  stdcompat__random.mli
  stdcompat__random_s.ml
  stdcompat__random_s.mli
  stdcompat__result.ml
  stdcompat__result.mli
  stdcompat__result_s.ml
  stdcompat__result_s.mli
  stdcompat__root.ml
  stdcompat__root.mli
  stdcompat__seq.ml
  stdcompat__seq.mli
  stdcompat__seq_s.ml
  stdcompat__seq_s.mli
  stdcompat__set.ml
  stdcompat__set.mli
  stdcompat__set_s.ml
  stdcompat__set_s.mli
  stdcompat__stack.ml
  stdcompat__stack.mli
  stdcompat__stack_s.ml
  stdcompat__stack_s.mli
  stdcompat__stdlib.ml
  stdcompat__stdlib.mli
  stdcompat__stdlib_s.ml
  stdcompat__stdlib_s.mli
  stdcompat__string.ml
  stdcompat__string.mli
  stdcompat__stringLabels.ml
  stdcompat__stringLabels.mli
  stdcompat__stringLabels_s.ml
  stdcompat__stringLabels_s.mli
  stdcompat__string_s.ml
  stdcompat__string_s.mli
  stdcompat__stubs.c
  stdcompat__sys.ml
  stdcompat__sys.mli
  stdcompat__sys_s.ml
  stdcompat__sys_s.mli
  stdcompat__tools.ml
  stdcompat__tools.mli
  stdcompat__uchar.ml
  stdcompat__uchar.mli
  stdcompat__uchar_s.ml
  stdcompat__uchar_s.mli
  stdcompat__unit.ml
  stdcompat__unit.mli
  stdcompat__unit_s.ml
  stdcompat__unit_s.mli
  stdcompat__weak.ml
  stdcompat__weak.mli
  stdcompat__weak_s.ml
  stdcompat__weak_s.mli)
  (deps (source_tree .) (universe))
  (action (run sh configure)))
