opam-version: "1.2"
maintainer: "Thierry Martinez <martinez@nsup.org>"
authors: "Thierry Martinez <martinez@nsup.org>"
homepage: "https://github.com/thierry-martinez/stdcompat"
bug-reports: "https://github.com/thierry-martinez/stdcompat/issues"
license: "BSD"
dev-repo: "https://github.com/thierry-martinez/stdcompat.git"
build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name]
build-doc: [ "jbuilder" "build" "@doc" ]
depends: [
  "jbuilder" {build}
  "cppo" {build}
  "result"
  "seq"
]
available: [ocaml-version >= "3.12.1" & ocaml-version < "4.08.0"]
